Fixed checkbox size on mobile

--- a/www/less/main.less
+++ b/www/less/main.less
@@ -71,6 +71,9 @@ main {
   margin: 0;
   right: 0;
   top: 18px;
+  @media(max-width:767px){
+    zoom: 1.5;
+  }
   zoom: 2.5;
 }
 
